--- a/DS_Questions/Questions/Strings/Binary/Minimum_Changes_To_Make_Alternating_Binary_String.adoc
+++ b/DS_Questions/Questions/Strings/Binary/Minimum_Changes_To_Make_Alternating_Binary_String.adoc
@@ -159,3 +159,31 @@ impl Solution {
     }
 }
 ```
+==== Go
+```go
+func minOperations(s string) int {
+    var ops = 0;
+    var opse = 0;
+           
+    // Making 01010101
+    for i := 0; i < len(s); i++ {
+           if i%2 == 0 && s[i] == '1' { // Even index. 0,2,4
+             ops++
+           }
+           if i%2 == 1 && s[i] == '0' { // Odd index. 1,3,5
+             ops++
+           }
+    }
+           
+    // Reset index for the second loop
+    for i := 0; i < len(s); i++ {
+           if i%2 == 0 && s[i] == '0' { // Even index. 0,2,4
+             opse++
+           }
+           if i%2 == 1 && s[i] == '1' { // Odd index. 1,3,5
+             opse++
+           }
+     }           
+     return int(math.Min(float64(ops), float64(opse)))
+}
+```
