--- a/DS_Questions/Algorithms/Dynamic_Programming/README.adoc
+++ b/DS_Questions/Algorithms/Dynamic_Programming/README.adoc
@@ -89,10 +89,11 @@ start ___  ___
 ===== link:/DS_Questions/Questions/Permutation_Combination/Coin_Change_2.adoc[Coin Change 2]
 ===== link:/DS_Questions/Questions/Permutation_Combination/No_of_Ways_to_Climb_ith_Stairs_1or2Steps.md[Climbing Stairs]
 ===== link:/DS_Questions/Questions/Number/Minimum_Cost_Climbing_Stairs.md[Minimum Cost Climbing Stairs]
-==== link:/DS_Questions/Questions/Number/Delete_and_Earn_or_Max_Gains.md[Delete and Earn]
-==== link:/DS_Questions/Questions/Number/Fibonacci_Number.md[Fibonacci Series]
-==== link:/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/Maximum/Max_Sum_Money_House_Robber.md[House Robber]
-==== link:/DS_Questions/Questions/Strings/SubString_SubSequence/Longest_Common_SubSequence_in_2_strings.md[Longest Common Subsequence]
-==== link:DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/Number_of_Increasing_Paths_in_a_Grid.md[Number of Increasing Paths in a Grid]
-==== link:/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/Minimum/Paint_House.md[Paint House]
-==== link:/DS_Questions/Questions/Random/Power/Power_x_to_n.md[Power (x,n)]
+===== link:/DS_Questions/Questions/Number/Delete_and_Earn_or_Max_Gains.md[Delete and Earn]
+===== link:/DS_Questions/Questions/Number/Fibonacci_Number.md[Fibonacci Series]
+===== link:/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/Maximum/Max_Sum_Money_House_Robber.md[House Robber]
+===== link:/DS_Questions/Questions/Strings/SubString_SubSequence/Longest_Common_SubSequence_in_2_strings.md[Longest Common Subsequence]
+===== link:DS_Questions/Questions/vectors_arrays/2d-grid/Find_Search_Count/Number_of_Increasing_Paths_in_a_Grid.md[Number of Increasing Paths in a Grid]
+===== link:/DS_Questions/Questions/vectors_arrays/Find_Search_Count/Find/Unsorted/Minimum/Paint_House.md[Paint House]
+===== link:/DS_Questions/Questions/Random/Power/Power_x_to_n.md[Power (x,n)]
+===== link:/DS_Questions/Questions/Strings/EncodeDecode_EncryptDec_CompDecompress/Encode_Decode/Total_Possible_ways_to_Decode.adoc[Decode Ways]
