--- a/System-Design/Scalable/Financial/Mint/README.adoc
+++ b/System-Design/Scalable/Financial/Mint/README.adoc
@@ -7,10 +7,12 @@
 
 === 1. Requirements
 * *Functional*
+
 [[req1]]
-req-1. User can connect all financial accounts to mint
+1. User can connect all financial accounts to mint
+
 [[req2]]
-req-2. Service extracts transactions from the account(daily updates)
+2. Service extracts transactions from the account(daily updates)
 3. Categorizes transactions: Allows manual category override by the user, No automatic re-categorization
 4. Cashflow Analyses: Analyzes monthly spending, by category.
 5. Budget: Users to manually set a budget, Sends notifications when approaching or exceeding budget. 
