--- a/System-Design/Scalable/Financial/Mint/README.adoc
+++ b/System-Design/Scalable/Financial/Mint/README.adoc
@@ -9,10 +9,11 @@
 * *Functional*
 
 [[req1]]
-1. User can connect all financial accounts to mint
+1. (req-1)User can connect all financial accounts to mint
 
 [[req2]]
 2. Service extracts transactions from the account(daily updates)
+
 3. Categorizes transactions: Allows manual category override by the user, No automatic re-categorization
 4. Cashflow Analyses: Analyzes monthly spending, by category.
 5. Budget: Users to manually set a budget, Sends notifications when approaching or exceeding budget. 
@@ -24,12 +25,15 @@
 1. Analytics, Suggestions, Predictions, Logging
 
 === 2. API Design (For every requirement)
-<<req1, add_account>> (cust_id, struct account_info{bank_name, acnt_no, cust_name, ifsc_code}, phone_no)
-```
+link:https://github.com/amitkumar50/Code-examples/blob/master/Networking/OSI-Layers/Layer-7/Protocols/HTTP/README.adoc[HTTP Methods]
 
+<<req1, add_account>> (mint_cust_id, struct user_info{account_info{bank_name, acnt_no, cust_name, ifsc_code}, phone_no}, validation_oauth_token, current_time_stamp)
 ```
-<<req2, extract_transaction>> (cust_id, struct account_info{bank_name, acnt_no, cust_name, ifsc_code}, phone_no)
+POST https://lb_fqdn:port/v1/add_account?mint_cust_id=12312asa1&bank_name=hdfc&photo_url=https://photo.com/photo1.png&current_time_stamp=
 ```
+<<req2, extract_transaction>> (mint_cust_id, service_token)
+```
+GET https://lb_fqdn:port/v1/extract_transaction?mint_cust_id=12312asa1&service_token=aaaaa
 ```
 
 === 3. BOE
