--- a/DS_Questions/Questions/vectors_arrays/SubSequence_SubArray/SubSequence/Longest_Increasing_Subsequence.adoc
+++ b/DS_Questions/Questions/vectors_arrays/SubSequence_SubArray/SubSequence/Longest_Increasing_Subsequence.adoc
@@ -58,7 +58,6 @@ int lis(std::vector<int> vecArr) {
       }
     }
   }
-  
   return iMax;
 }
 ```
@@ -84,4 +83,18 @@ public:
         return len;
     }
 };
+```
+==== Python
+```py
+class Solution:
+    def lengthOfLIS(self, nums: List[int]) -> int:
+        size = len(nums)
+        dp = [1]*size
+        out = 1
+        for i in range(1,size):
+            for j in range(0,i):
+                if nums[i] > nums[j] and dp[i] <= dp[j]:
+                    dp[i] = dp[j] + 1
+                    out = max(dp[i], out)
+        return out
 ```
